Fixed input fields stretching too far

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -586,6 +586,9 @@ footer p {
         position:relative;
         margin-bottom: 2rem;
         justify-content: center;
+        max-width: 90%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     div#information-box {
